<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>dk.sdu.sem</groupId>
  <artifactId>Rachend</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Rachend</name>
  <modules>
    <module>Common</module>
    <module>CommonCollision</module>
    <module>GameEngine</module>
    <module>Player</module>
    <module>Enemy</module>
    <module>Collision</module>
    <module>Physics</module>
    <module>Behavior</module>
    <module>Pathfinding</module>
    <module>Item</module>
    <module>Weapon</module>
    <module>Room</module>
    <module>Level</module>
    <module>UI</module>
      <module>CommonPlayer</module>
      <module>Inventory</module>
  </modules>


  <properties>
    <java>java</java>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.9</maven.compiler.source>
    <maven.compiler.target>1.9</maven.compiler.target>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Add any common dependencies here -->
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>3.2.0</version>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <fork>true</fork>
          <release>16</release>
        </configuration>
      </plugin>
      <!-- execute the resulting project -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.6.0</version>
        <inherited>false</inherited>
        <executions>
          <execution>
            <goals>
              <goal>exec</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <executable>${java}</executable>
          <workingDirectory>.</workingDirectory>
          <longModulepath>false</longModulepath>
          <arguments>
            <argument>-Dorg.lwjgl.util.Debug=true</argument>
            <argument>-Djava.library.path=libs</argument>
            <argument>-Djavafx.animation.fullspeed=true</argument>
            <argument>--module-path=mods-mvn</argument>
            <argument>--class-path=libs/*</argument>
            <argument>--module=GameEngine/dk.sdu.sem.gamesystem.Main</argument>
            <argument>--add-modules javafx.graphics</argument>
          </arguments>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <!-- parent project should delete 'mods-mvn' -->
      <id>parent-project</id>
      <activation>
        <file>
          <missing>src</missing>
        </file>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-clean-plugin</artifactId>
            <version>3.2.0</version>
            <configuration>
              <filesets>
                <fileset>
                  <directory>mods-mvn</directory>
                </fileset>
                <fileset>
                  <directory>libs</directory>
                </fileset>
              </filesets>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <!-- child projects should copy artifact into 'mods-mvn' -->
      <id>child-project</id>
      <activation>
        <file>
          <exists>src</exists>
        </file>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>3.4.0</version>
            <executions>
              <execution>
                <id>copy-installed</id>
                <phase>install</phase>
                <goals>
                  <goal>copy</goal>
                </goals>
                <configuration>
                  <artifactItems>
                    <artifactItem>
                      <groupId>${project.groupId}</groupId>
                      <artifactId>${project.artifactId}</artifactId>
                      <version>${project.version}</version>
                      <type>jar</type>
                    </artifactItem>
                  </artifactItems>
                  <outputDirectory>../mods-mvn</outputDirectory>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>